hphp/hack/test/typecheck/global_const18.php
<?hh // partial

const X = "$x";
